2024-01-26T08:17:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7665570255 # 58
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 595 1021 / 606 1040
* notice: next accum: outdated-unq outdated-all / unq all: 596 1022 / 607 1041
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-01-12] / [2024-01-26]

2024-01-26T01:03:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662536502 # 57
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 595 1021 / 606 1039
* notice: next accum: outdated-unq outdated-all / unq all: 595 1021 / 606 1040
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-25]

2024-01-25T16:19:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7657394406 # 56
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 594 1020 / 606 1039
* notice: next accum: outdated-unq outdated-all / unq all: 595 1021 / 606 1039
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-25T08:19:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7651693381 # 55