@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-26T08:17:04Z",
+  "timestamp" : "2024-01-27T01:01:22Z",
   "count_outdated" : 1022,
   "uniques_outdated" : 596,
-  "count" : 1041,
-  "uniques" : 607,
+  "count" : 1043,
+  "uniques" : 608,
   "clones" : [
     {
       "timestamp": "2024-01-13T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
