@@ -1,3 +1,12 @@
+2024-01-27T01:01:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7675209949 # 60
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
+* notice: last 14d: unq all: 3 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 596 1022 / 607 1041
+* notice: next accum: outdated-unq outdated-all / unq all: 596 1022 / 608 1043
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-01-26]
+
 2024-01-26T08:17:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7665570255 # 58
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
